--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "clean": "rm -rf dist || del /f /s /q dist",
     "build": "npm run clean && tsc && npx resolve-tspaths",
-    "start": "node dist/index",
-    "rewrite": "node dist/rewrite"
+    "start": "node --no-warnings dist/index",
+    "rewrite": "node --no-warnings dist/index",
+    "authenticate": "node --no-warnings dist/authenticate"
   },
   "keywords": [],
   "author": "",
@@ -14,21 +15,28 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.5.0",
     "@types/ws": "^8.5.12"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.3.1",
     "axios": "^1.7.5",
     "chalk": "^5.3.0",
     "chokidar": "^4.0.3",
     "cron": "^3.2.1",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
     "dotenv": "^16.4.5",
     "eventemitter2": "^6.4.9",
     "express": "^4.19.2",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
+    "is-port-reachable": "^4.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "obscenity": "^0.4.1",
+    "ollama": "^0.5.11",
     "pretty-ms": "^9.2.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
