Fixed bugs, cleaned up, added new features!

--- a/config.template.json
+++ b/config.template.json
@@ -5,7 +5,8 @@
         "accent": 10,
         "customChallenge": 25,
         "swedishOnly": 10,
-        "noLaughing": 10
+        "noLaughing": 10,
+        "theTower": 1
     },
     "timerLengths": {
         "noSwearing": 10,
