--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "obscenity": "^0.4.1",
     "ollama": "^0.5.11",
     "pretty-ms": "^9.2.0",
+    "to-words": "^4.2.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
   }
