Update command triggers and improve message handling; modify cache expiration logic

--- a/.env.template
+++ b/.env.template
@@ -22,4 +22,4 @@ SPOTIFY_REDIRECT_URI=http://localhost:7380/spotify
 #_SPOTIFY_EXPIRES_AT=example_spotify_expires_at (unix timestamp)
 
 # Optional, defaults to http://127.0.0.1:11434
-OLLAMA_HOST=http://127.0.0.1:11434
+OLLAMA_HOST_LOCATION=http://127.0.0.1:11434
