Allowed for systemd detection

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "clean": "rm -rf dist || del /f /s /q dist",
     "build": "npm run clean && tsc && npx resolve-tspaths",
     "build-start": "npm run build && npm run start",
+    "build-start-sysd": "npm run build && npm run start-sysd",
     "start": "node --no-warnings dist/index",
+    "start-sysd": "INVOCATION_ID=$IID node --no-warnings dist/index",
     "rewrite": "node --no-warnings dist/index",
     "authenticate": "node --no-warnings dist/authenticate"
   },
