--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.19.2",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
+    "ioredis": "^5.5.0",
     "is-port-reachable": "^4.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
