Added a way to add or remove from liked songs on spotify
Signed-off-by: Inimi <me@inimicalpart.com>

--- a/.env.template
+++ b/.env.template
@@ -23,3 +23,6 @@ SPOTIFY_REDIRECT_URI=http://localhost:7380/spotify
 
 # Optional, defaults to http://127.0.0.1:11434
 OLLAMA_HOST_LOCATION=http://127.0.0.1:11434
+
+
+REDIS_URI=rediss://aaa:bbb@ccc.com:6379
